terraform/modules/dev_deploy_isc/network.tf
resource "aws_vpc" "vpc_obligatorio" {
  cidr_block           = var.vpc_cidr
  enable_dns_support   = true
  enable_dns_hostnames = true

  tags = {
    Name = var.name_vpc
  }
}

resource "aws_subnet" "public" {
  vpc_id                  = aws_vpc.vpc_obligatorio.id 
  availability_zone       = var.vpc_aws_az
  cidr_block              = var.public_subnet_cidr
  map_public_ip_on_launch = true
  tags = {
    Name = "subnet publica"
  }
}

resource "aws_subnet" "private" {
  vpc_id                  = aws_vpc.vpc_obligatorio.id 
  availability_zone       = var.availability_zone2
  cidr_block              = var.private_subnet_cidr
  map_public_ip_on_launch = true
  tags = {
    Name = "subnet privada"
  }
}

resource "aws_internet_gateway" "main" {
  vpc_id = aws_vpc.vpc_obligatorio.id

  tags = {
    Name = "igw"
  }
}


resource "aws_route_table" "public" {
  vpc_id = aws_vpc.vpc_obligatorio.id 

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.main.id
  }

  tags = {
    Name = "public-route-table"
  }
}


resource "aws_route_table_association" "public" {
  subnet_id      = aws_subnet.public.id
  route_table_id = aws_route_table.public.id
}

resource "aws_eip" "nat" {
   associate_with_private_ip = true

  tags = {
    Name = "main-eip"
  }
}

resource "aws_nat_gateway" "main" {
  allocation_id = aws_eip.nat.id
  subnet_id     = aws_subnet.public.id

  tags = {
    Name = "main-nat-gateway"
  }
}

resource "aws_route_table" "private" {
  vpc_id = aws_vpc.vpc_obligatorio.id

  tags = {
    Name = "private-route-table"
  }
}


resource "aws_route_table_association" "private" {
  subnet_id      = aws_subnet.private.id
  route_table_id = aws_route_table.private.id
}

resource "aws_route" "private_internet_access" {
  route_table_id         = aws_route_table.private.id
  destination_cidr_block = "0.0.0.0/0"
  nat_gateway_id         = aws_nat_gateway.main.id
}
